<resources>
    <string name="app_name">SapuTipu</string>
    <string name="search">Cari</string>
    <string name="scan">Scan</string>
    <string name="tips">Tips &amp; Trik</string>
    <string name="tips_trick">Tips &amp; Trik Menghindari Penipuan</string>
    <string name="others">Lainnya</string>
    <string name="search_placeholder">Pencarian nomor akun</string>
    <string name="search_account">Cari Rekening</string>
    <string name="report_account">Laporkan Rekening</string>
    <string name="input_message">Masukkan pesan</string>
    <string name="search_failed">Data tidak ditemukan</string>
    <string name="scan_result">Hasil Pindai:</string>
    <string name="input_account">Masukkan nomor rekening bank</string>
    <string name="input_scam_desc">Masukkan deskripsi laporan</string>
    <string name="report">Laporkan</string>
    <string name="input_title">Masukkan judul laporan</string>
    <string name="input_evidence">Masukkan bukti laporan</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="register_success">Pendaftaran berhasil</string>
    <string name="register_failed">Pendaftaran gagal: </string>
    <string name="login_success">Login berhasil</string>
    <string name="login_failed">Login gagal: </string>
    <string name="logout_success">Logout berhasil</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Nama Pengguna</string>
    <string name="logout">Logout</string>
    <string name="searchbar_hint">Masukkan nomor rekening</string>
    <string name="title">Judul</string>
    <string name="date">10/12/2023</string>
    <string name="report_success">Laporan berhasil</string>
    <string name="report_failed">Laporan gagal: </string>
    <string name="input_scan_text">Masukkan teks</string>
    <string name="spam">SPAM</string>
    <string name="scam">SCAM</string>
    <string name="neutral">NEUTRAL</string>
    <string name="result">80%</string>
    <string name="description">Deskripsi laporan:</string>
    <string name="evidence">Bukti laporan:</string>

    <string name="tips1">1. Terus update dengan teknik scam terbaru</string>
    <string name="tips2">2. Jangan mengeklik tautan yang muncul di pesan random email dan pesan bukanlah langkah yang cerdas jika anda tidak mempercayai sumbernya</string>
    <string name="tips3">3. Berhati-hatilah terhadap Pop-Up, jika anda ragu untuk menutup pop-up tersebut, tutup saja halaman websitenya</string>
    <string name="tips4">4. Jangan pernah mengisi informasi pribadi di situs yang anda tidak percayai</string>
    <string name="tips5">5. Terus update browser anda agar patch keamanannya selalu mutakhir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
