<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        tools:text="@string/title"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tv_createdAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:text="@string/date"
        android:textAlignment="center"
        android:textColor="@color/blue"
        />

    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_createdAt"
        android:text="@string/description"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/description_title"
        tools:text="@string/description"
        />

    <TextView
        android:id="@+id/evidence_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:text="@string/evidence"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/evidence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/evidence_title"
        tools:text="@string/evidence"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progressTint="@color/black"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>