<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@id/layout_logo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="32dp"
            android:paddingTop="32dp"
            android:paddingBottom="8dp"
            android:src="@drawable/logo_saputipu"
            />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_logo"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:startIconDrawable="@drawable/baseline_account_box_24"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            >
            <com.project.saputipuapp.customView.UsernameEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_username"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            >
            <com.project.saputipuapp.customView.EmailEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_email"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:startIconDrawable="@drawable/baseline_key_24"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black"
            >
            <com.project.saputipuapp.customView.PassEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password"
            android:text="@string/register"
            app:cornerRadius="4dp"
            />

        <TextView
            android:id="@+id/btn_login_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            android:layout_marginBottom="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/blue"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:progressTint="@color/black"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>